# libarchive_superbuild

./: .gitattributes  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: libarchive_sb_compileChecksOverride.cmake
cmake/incom/modules/: FindxxHash.cmake
cmake/modules/: FindBLAKE2.cmake  FindLZ4.cmake  FindLZO2.cmake
cmake/patches/: libarchive-openssl-checkstate.patch
cmake/scripts/: libarchive_sb_compileChecksOverride.cmake
src/: main.cpp
